[package]
name = "reacty_yew"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
syn = { version = "1.0.8", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
