[package]
name = "reacty_yew"
version = "0.1.0"
authors = ["Maximilian Goisser <goisser94@gmail.com>"]
edition = "2018"
description = "Generate Yew components from React component via Typescript type definitions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/hobofan/reacty_yew"
keywords = ["yew", "react"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
syn = { version = "1.0.8", features = ["full", "extra-traits"] }
quote = "1.0.2"
proc-macro2 = "1.0.6"
proc-macro-error = "1.0"
